--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:01 PM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">LUCAS LN</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">MUD RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:12 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">HEARTLAND DR</td>
