--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         
           <tr>
             <td data-label="Time Reported">05:22 PM</td>
-            <td data-label="Incident">Suspicious Person</td>
+            <td data-label="Incident">Abduction Non-Family</td>
             <td data-label="Street Name">MORGAN BRANCH RD</td>
             <td data-label="City">PEYTONA</td>
             <td data-label="Cross Streets">GARRETSON DR (0.1 miles) and GRIFFITH LN (0.1 miles)</td>
