--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:52 PM</td>
+            <td data-label="Incident">Fire - Structure</td>
+            <td data-label="Street Name">THIRD AVE WEST</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:25 PM</td>
             <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">COAL RIVER RD</td>
