--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">06:52 PM</td>
             <td data-label="Incident">Fire - Structure</td>
-            <td data-label="Street Name">THIRD AVE WEST</td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Street Name">THIRD AVE W</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">FOURTH ST W (0.1 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Spruce River VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
