--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:56 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">JAMES BRANCH RD</td>
+            <td data-label="City">WHARTON</td>
+            <td data-label="Cross Streets">PINE GROVE RD (0.8 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:52 PM</td>
             <td data-label="Incident">Fire - Structure</td>
             <td data-label="Street Name">THIRD AVE W</td>
