--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">THIRD AVE W</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">FOURTH ST W (0.1 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Van VFD</td>
           </tr>
         
           <tr>
