--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:30 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">SMOOT AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">COUNTRY ESTATES RD (203.5 feet) and MALL RD (0.4 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:47 PM</td>
             <td data-label="Incident">Pregnancy</td>
             <td data-label="Street Name">SAND LICK RD</td>
