--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:39 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">LEE AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">TYLER CIR (20.9 feet) and TYLER CIR (101.0 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:53 PM</td>
             <td data-label="Incident">Fire - Structure</td>
             <td data-label="Street Name">THIRD AVE W</td>
