--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             <td data-label="Incident">Burglar Alarm - Silent</td>
             <td data-label="Street Name"></td>
             <td data-label="City">SYLVESTER</td>
-            <td data-label="Cross Streets">RUTH AVE (146.5 feet) and KUHN AVE (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets">RUTH AVE (112.1 feet) and KUHN AVE (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
