--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:10 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">THIRD AVE W</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">FOURTH ST W (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:53 AM</td>
             <td data-label="Incident">Burglar Alarm - Silent</td>
             <td data-label="Street Name"></td>
