--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:43 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">JACKSON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">THIRD ST (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:36 AM</td>
             <td data-label="Incident">Transport to KDU</td>
             <td data-label="Street Name">KENMORE DR</td>
