--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:52 AM</td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
+            <td data-label="Street Name">SENG CREEK RD</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">DANIEL DR (0.3 miles) and IDLEWOOD LN (1.4 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:15 AM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">NAVY LN</td>
