--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:06 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">CROOK RD</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">BIAS BRANCH RD (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:52 AM</td>
             <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">SENG CREEK RD</td>
