--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">CROOK RD</td>
             <td data-label="City">JEFFREY</td>
             <td data-label="Cross Streets">BIAS BRANCH RD (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">09:52 AM</td>
-            <td data-label="Incident">Animal Complaint/Rescue</td>
-            <td data-label="Street Name">SENG CREEK RD</td>
-            <td data-label="City">WHITESVILLE</td>
-            <td data-label="Cross Streets">DANIEL DR (0.3 miles) and IDLEWOOD LN (1.4 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
