--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:57 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">EBONY LN</td>
+            <td data-label="City">OTTAWA</td>
+            <td data-label="Cross Streets">SPRUCE RIVER RD (127.8 feet) and IVORY LN (209.3 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:10 AM</td>
             <td data-label="Incident">Fire - Structure</td>
             <td data-label="Street Name">THIRD AVE W</td>
