--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">EBONY LN</td>
             <td data-label="City">OTTAWA</td>
             <td data-label="Cross Streets">SPRUCE RIVER RD (127.8 feet) and IVORY LN (209.3 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Spruce River VFD, Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
