--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:07 PM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">JACKSON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">THIRD ST (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:25 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">KENMORE DR</td>
